test/programs/invalid_programs/classes/no_constructor.jm
#!TypeError

class Foo
  def print()
    puts("foo")
  end
end

f = Foo()
